--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "generate": "prisma generate"
+    "postinstall": "prisma generate schema"
   },
   "dependencies": {
     "@prisma/client": "^5.3.1",
