--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@prisma/client": "^5.3.1",
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.3",
     "crypto-random-string": "^5.0.0",
-    "next": "latest",
+    "next": "^14.1.0",
+    "package.json": "^0.0.0",
     "react": "latest",
     "react-dom": "latest",
     "sqlite3": "^5.1.6"
