--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "bootstrap-icons": "^1.11.3",
     "crypto-random-string": "^5.0.0",
     "next": "^14.1.0",
-    "package.json": "^0.0.0",
+    "prisma": "^5.8.1",
     "react": "latest",
     "react-dom": "latest",
     "sqlite3": "^5.1.6"
